--- a/wiki/CheckoutfromSVN.wiki
+++ b/wiki/CheckoutfromSVN.wiki
@@ -2,21 +2,22 @@
 
 = Checkout the latest source =
 
-  * Use either TortoiseSVN or AnkhSVN to check out the latest source. The path to the complete UMM 2 Add-In VS.NET solution is https://umm2-addin.googlecode.com/svn/trunk/ . The solution contains three projects: UMM2AddIn, UMM2AddInTest, and UMM2AddInInstaller
-  * You may also follow the instructions as given by google code on http://code.google.com/p/umm2-addin/source/browse/
+  * Use either TortoiseSVN or AnkhSVN to check out the latest source. The path to the complete VIENNA Add-In VS.NET solution is https://vienna-add-in.googlecode.com/svn/trunk/ . The solution contains three projects: VIENNAAddIn, VIENNAInstaller, and GIEMInstaller
+  * You may also follow the instructions as given by google code on http://code.google.com/p/vienna-add-in/source/browse/
 
 = Build it in Visual Studio =
 
   * Open the solution file in Visual Studio
   * Build the solution
 
-= Register the UMM 2 Add-In within EnterpriseArchitect = 
+= Register the VIENNA Add-In  within EnterpriseArchitect = 
 
-  * The UMM 2 Add-In must requires some keys within the Windows Registry
+  * The VIENNA Add-In  must requires some keys within the Windows Registry
     * A key to register the Add-In with EnterpriseArchitect
     * Some keys that the Add-In needs itself
-  For your convenience, we included a registry file within the source located in the ext folder. The registry file assumes that you have checked out the whole solution under `C:\UMM2AddIn`. This means that the UMM2AddIn project is located a folder beneath at `C:\UMM2AddIn\UMM2AddIn`. If this is not the case, you have to edit the *createEAKeys.reg* file accordingly, in order to point to your installation directory. 
-  * Double-click the *createEAKeys.reg* file and confirm that you want to add the information to your Windows registry. This will add the necessary keys for the UMM2AddIn itself.
+
+For your convenience, we included a registry file within the source located in the \ext folder. The registry file assumes that you have checked out the whole solution under `C:\VIENNAAddIn`. This means that the VIENNAAddIn project is located a folder beneath at `C:\VIENNAAddIn\VIENNAAddIn`. If this is not the case, you have to edit the *viennaaddin.reg* file accordingly, in order to point to your installation directory. 
+  * Double-click the *viennaaddin.reg* file and confirm that you want to add the information to your Windows registry. This will add the necessary keys for the VIENNA Add-In itself.
 
 
 = Register the compiled UMM 2 Add-In with your system = 
