Edited wiki page through web user interface.

--- a/wiki/CheckoutfromSVN.wiki
+++ b/wiki/CheckoutfromSVN.wiki
@@ -25,7 +25,7 @@ For your convenience, we included a registry file *viennaaddin.reg* within the s
   * Build the VIENNA Add-In solution in Visual Studio. It is not necessary to build the Installers in this step. The resulting DLL file now has to be registered with your system. If you have checked out the solution under `C:\VIENNAAddIn` the DLL is found under `C:\VIENNAAddIn\VIENNAAddIn\bin\Debug\VIENNAAddIn.dll`. If you chose a different path, locate the DLL now. 
   * In general you should develop in Debug mode in Visual Studio and not in Release mode.
   * Open a console (command line) window (if you run Windows Vista, you may need to open the console under elevated (Administrator) privileges.
-  * Type the following command 'C:\>regsvr32 C:\VIENNAAddIn\VIENNAAddIn\bin\Debug\VIENNAAddIn.dll'
+  * Type the following command `C:\>regsvr32 C:\VIENNAAddIn\VIENNAAddIn\bin\Debug\VIENNAAddIn.dll`
 (if you chose a different path, substitute the path to the DLL file accordingly). There may occur an error message that some entry-point DllRegisterServer was not found, or similar. You can ignore that. 
 
 
