Edited wiki page through web user interface.

--- a/wiki/DownloadHint.wiki
+++ b/wiki/DownloadHint.wiki
@@ -1,1 +1,3 @@
-The first stable installer will be online before Christmas 2008.
+The VIENNA AddIn is currently undergoing a beta testing phase. As soon as beta testing is finished a first stable installer will be made available.
+
+Estimated date for the first installer: Mid-January 2009
