--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,13 +1,10 @@
 * [VIENNAAddInOverview The VIENNA AddIn]
-
  * [ForUsers Useful information for users]
   * [InstallationNotes Installation Notes]
   * [Troubleshooting Troubleshooting]
-  * [Release_Notes Release Notes]    
-
+  * [Release_Notes Release Notes]  
  * [ForDevelopers Useful information for developers]
   * [CheckoutfromSVN How to check out from SVN]
-  * [CreateInstallerFileForDistribution Create a redistributable installer] 
-  
+  * [CreateInstallerFileForDistribution Create installer]   
 * [EnterpriseArchitect The Enterprise Architect]
  * [QuickLinker EA quicklinker feature]
