--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -1,5 +1,11 @@
 #summary Installation notes for the UMM 2 Add-In
 
+= Requiements =
+
+ # Windows 2000/XP/Vista
+ # .NET Framework 3.5 ([http://www.microsoft.com/downloads/details.aspx?FamilyId=333325FD-AE52-4E35-B531-508D977D32A6&displaylang=en free download])
+ # Enterprise Architect 7.1 or higher (a 30 day trial version can be downloaded from [http://www.sparxsystems.com.au Sparx Systems's website]
+
 
 = How to install the Add-In using the Installation Package =
 
