--- a/wiki/CreateInstallerFileForDistribution.wiki
+++ b/wiki/CreateInstallerFileForDistribution.wiki
@@ -1,17 +1,17 @@
 #summary How to create an installer for the VIENNA-AddIn
 #labels Phase-Implementation
 
-*VIENNAAddIn project*
+* VIENNAAddIn project
 
-1. Edit the following entry in AssemblyInfo`.`cs (subfolder Properties)
-   {{{assembly: AssemblyVersion ("0.0.1.`*`")}}}
+1. Edit the following entry in AssemblyInfo.cs (subfolder Properties)
+   {{{assembly: AssemblyVersion ("0.0.1.*")}}}
    
    Increment the version number.
    
 2. Build the VIENNAAddIn project
 
 
-*VIENNAAddInInstaller*
+* VIENNAAddInInstaller
 
 1. Click on VIENNAAddInInstaller project and edit the version property. Use the same version number as for the VIENNAAddIn project. This will also change the product code of the installer.
 
