Edited wiki page through web user interface.

--- a/wiki/Troubleshooting.wiki
+++ b/wiki/Troubleshooting.wiki
@@ -5,7 +5,7 @@
 
 * _Q: After I have installed the VIENNA Add-In cannot see the VIENNA Add-In menu item in the Enterprise Architect Add-Ins menu._
 
-A: If you have installed the VIENNA Add-In choosing the option "Install for all users of this computer" you have to manually add the registry entries, necessary for the VIENNA Add-In. Go to the folder to which the VIENNA Add-In was installed - usually C:\Program Files\VIENNAAddIn\VIENNAAddIn . Select the subfolder \ext and double click on the file viennaaddin.reg.
+A: If you have installed the VIENNA Add-In choosing the option "Install for all users of this computer" you have to manually add the registry entries, necessary for the VIENNA Add-In. Go to the folder to which the VIENNA Add-In was installed - usually C:\Program Files\VIENNAAddIn\VIENNAAddIn . Select the subfolder \ext and double click on the file *viennaaddin.reg*.
 
 * _Q: After I have started the installation of the VIENNA Add-In the installer wants to download the .NET framework_
 
