--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -74,7 +74,11 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
 
 
 
-\section{Introduction}
+\section{Introduction} by PL
+
+- explain the use case scenario of the add-in
+
+- motivate the model driven approach for SOA artifacts
 
 
 \begin{figure}
@@ -85,14 +89,25 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
 \end{figure}
 
 
-\section{UML Profile Definition}
+\section{UML Profile Definition} by TM
 
-\section{Semi-automatic artifact generation}
+- explain the concepts of the MDG - the dynamic loading from umm-dev.org and the quicklinker
 
-\section{XML schema generation}
+\section{Semi-automatic artifact generation} by CP und CE
+
+explain the ABIE wizard and BDT wizard. rather concentrate on the facilitation benefit of the wizard than on the technical details behind it
+
+\section{XML schema generation} by MS
+
+explain the XSD generator - motivate the benefit of deriving schema from conceptual models
 
 
-\cite{man:umm2} \cite{man:upcc} \cite{man:VIENNAAddIn}
+
+
+%Use the three references where appropriate - do not add additional references since we are short of space anyway
+\nocite{man:umm2} 
+\nocite{man:upcc} 
+\nocite{man:VIENNAAddIn}
 
 
 
