--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -62,6 +62,21 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
 \begin{abstract}
 
 
+% What is the problem
+
+Before two businesses can engage in an automated B2B collaboration an agreement on the exchange order of messages (process choreography) and on the exchanged information (business document definition) has to be made. The United Nations Center for Trade Facilitation and Electronic Business (UN/CEFACT) provides two methodologies supporting the process choreography and business document definition - UN/CEFACT's Modeling Methodology and the Core Components Technical Specification. However, up to now little to no tool support for the two methodologies is provided.
+
+In this paper we present the VIENNA Add-In, a tool supporting model driven business collaborations. A business analyst defines the process choreography and the business document definition on a conceptual level. Eventually the conceptual models are used to derive deployment artifacts for a service oriented context.
+
+
+
+% Why is it a problem
+
+% What is the solution
+
+
+% What is the benefit
+
 
 \end{abstract}
 
