--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -62,10 +62,9 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
 \begin{abstract}
 
 %What is the problem
-The definition of concise and interoperable business documents has become one of the key issues in today's electronic business transactions. Usually business document definitions are defined on a conceptual level and logical level artifacts such as XML schema definitions are derived from it. Appropriate tool support and well agreed standards for such a scenario are still rather low.
-In this paper we present our tool VIENNA Add-In which supports a business document modeler in creating Core Component compliant business document model using the Unified Modeling Language (UML). The core components standard is maintained by UN/CEFACT (United Nations Center for Trade Facilitation and Electronic Business) and defines reusable building blocks for constructing business documents. 
-Our tool provides a set of powerful features such as model validation, semi-automatic generation of model artifacts, and generation of fully compliant XML schema definitions from a conceptual model representation. 
-
+The definition of concise and interoperable business documents has become one of the key issues in today's electronic business transactions. 
+In this paper, we present our tool VIENNA Add-In which supports a business document modeler in creating Core Component compliant business document models using the Unified Modeling Language (UML). The core components standard is maintained by UN/CEFACT (United Nations Center for Trade Facilitation and Electronic Business) and defines reusable building blocks for constructing business documents. 
+Our tool provides a set of powerful features for core components such as model validation, semi-automatic generation of model artifacts, and generation of fully compliant XML schema definitions from a conceptual model representation. Thereby, the VIENNA Add-In helps to shorten development cycles and helps to reduce errors in designing business documents. 
 
 %Why is it a problem
 
