--- a/publications/DocEng09/references.bib
+++ b/publications/DocEng09/references.bib
@@ -232,18 +232,21 @@
 
 @MANUAL{man:umm2,
   title = {{UN/CEFACT's Modeling Methodology 2.0}},
+  organization = {{UN/CEFACT}},
   note = {\url{http://www.untmg.org/umm/spec/foundation/2_0}},
   timestamp = {2009.04.28}
 }
 
 @MANUAL{man:upcc,
   title = {{UML Profile for Core Components}},
+  organization = {{UN/CEFACT}},
   note = {\url{http://www.untmg.org/upcc/spec/1_0}},
   timestamp = {2009.04.28}
 }
 
 @MANUAL{man:VIENNAAddIn,
-  title = {VIENNA Add-In},
+  title = {{Visualizing Inter-ENterprise Network Architectures}},
+  organization = {{VIENNA Add-In development team}},
   note = {\url{http://vienna-add-in.googlecode.com/}},
   timestamp = {2009.04.28}
 }
