--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -78,7 +78,9 @@ Our tool provides a set of powerful features for core components such as model v
 
 \section{Introduction}
 
-Before two business partners can engage in an automated B2B interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology and the Research Studios Austria, Studio Inter-Organisational Systems we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The VIENNA Add-In support both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business documents specific features. 
+Before two business partners can engage in an automated B2B interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology and the Research Studios Austria, Studio Inter-Organisational Systems we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect \footnote{http://www.sparxsystems.com.au}.
+
+The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business documents specific features. 
 
 Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. 
 \begin{figure}
